--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,6 +131,7 @@
     <string name="create_chore_edit_button">Done</string>
     <string name="create_chore_remove_button">Remove</string>
     <string name="chore_detail_assign_text">Which members will share this task?</string>
+    <string name="chore_detail_assign_text_short">Shared by:</string>
     <string name="chore_detail_assign_hint">Select members</string>
     <string name="chore_detail_due_text">Due:</string>
     <string name="chore_detail_repeats">Yes</string>
